--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Jomilto <joselobatof@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.1.3"
   },
   "browserslist": [
     "last 1 Chrome version"
