cambiando version de proyecto para publicacion

--- a/mediaplayer/package.json
+++ b/mediaplayer/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jomilto/platzi-mediaplayer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "./lib/MediaPlayer.js",
+  "main": "lib/MediaPlayer.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
