--- a/website/package.json
+++ b/website/package.json
@@ -17,5 +17,8 @@
   },
   "browserslist": [
     "last 1 Chrome version"
-  ]
+  ],
+  "dependencies": {
+    "@jomilto/platzi-mediaplayer": "^1.0.1"
+  }
 }
